# AlgoHaskell

./: .gitignore  AlgoHaskell.cabal  AlgoHaskell.lkshf  configure.cmd
benches/: runArrayListBench.cmd  runFibBench.cmd  runMemoBench.cmd  runQueueBench.cmd
src/: ArrayList.hs  Graph.hs  Main.hs  Numerics.hs  Tree.hs
src/Algo/: Exponential.hs  Folds.hs
src/Bench/Puzzles/: FibBench.hs
src/Graph/: AdjList.hs  BFS.hs  Class.hs  DFS.hs
src/List/: ArrayList.hs  IndexList.hs  IndexListClass.hs  SkewIndexList.hs
src/Puzzles/: Calendar.hs  Fibonacci.hs  FunWithFold.hs  Histogram.hs  Memoization.hs
src/Queue/: Class.hs  DataSeq.hs  Persistent.hs  RealTime.hs  SizedQueue.hs  Stack.hs  Transient.hs  Utils.hs
src/RMQ/: RangeQuery.hs
src/Test/Graph/: DfsTest.hs
src/Tree/: BinaryTree.hs  NaturalTree.hs  RoseTree.hs
src/Utils/: FormatString.hs  List.hs  Monoids.hs  Ordering.hs  Time.hs
test/: Benchs.hs  TestMain.hs  TestSuite.hs
test/Bench/: ArrayListBench.hs  Queue.hs
test/Bench/Puzzles/: FibBench.hs  MemoizationBench.hs
test/Test/: Queue.hs  RMQ.hs  RoseTreeTest.hs
test/Test/Graph/: BfsTest.hs
test/Test/List/: IndexListTest.hs
test/Test/Puzzles/: FibTest.hs  MemoizationTest.hs
