name: AlgoHaskell
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved

library
    exposed-modules:
        Graph
        Graph.AdjList
        Numerics
        Queue.Class
        Queue.Persistent
        Queue.Transient
        Queue.Utils
        RMQ.RangeQuery
        Utils.Monoids
    build-depends:
        HUnit -any,
        QuickCheck -any,
        base -any,
        criterion -any,
        containers >=0.5.6.2 && <0.6,
        mtl >=2.2.1 && <2.3
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Graph.Class
        Graph.DFS
        Puzzles.Fibonacci
    ghc-options: -ferror-spans -O2

executable exe-AlgoHaskell
    main-is: Main.hs
    build-depends:
        AlgoHaskell -any,
        base -any,
        criterion -any,
        containers >=0.5.6.2 && <0.6,
        mtl >=2.2.1 && <2.3
    default-language: Haskell2010
    hs-source-dirs: src test
    other-modules:
        Bench.Puzzles.FibBench
        Benchs
        Bench.Queue
    ghc-options: -ferror-spans -O2

test-suite test-AlgoHaskell
    type: exitcode-stdio-1.0
    main-is: TestMain.hs
    build-depends:
        HUnit -any,
        QuickCheck -any,
        base -any,
        criterion -any,
        containers >=0.5.6.2 && <0.6,
        mtl >=2.2.1 && <2.3
    default-language: Haskell2010
    hs-source-dirs: src test
    other-modules:
        Test.Graph.DfsTest
        Test.Puzzles.FibTest
        Test.RMQ
        TestSuite
        Test.Queue
    ghc-options: -ferror-spans
