name: AlgoHaskell
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved

library
    exposed-modules:
        Algo.Exponential
        Algo.Folds
        Graph
        Graph.AdjList
        Graph.BFS
        Graph.Class
        Graph.DFS
        List.ArrayList
        List.IndexList
        List.IndexListClass
        List.SkewIndexList
        Puzzles.Calendar
        Puzzles.Fibonacci
        Puzzles.Histogram
        Puzzles.Memoization
        Queue.Class
        Queue.DataSeq
        Queue.Persistent
        Queue.RealTime
        Queue.SizedQueue
        Queue.Stack
        Queue.Transient
        Queue.Utils
        RMQ.RangeQuery
        Tree
        Tree.BinaryTree
        Tree.NaturalTree
        Tree.RoseTree
        Utils.FormatString
        Utils.List
        Utils.Monoids
        Utils.Ordering
        Utils.Time

    build-depends:
        HUnit -any,
        QuickCheck -any,
        base -any,
        criterion -any,
        split -any,
        time -any,
        vector -any,
        data-inttrie -any,
        memoize -any,
        containers >=0.5.6.2 && <0.6,
        mtl >=2.2.1 && <2.3,
        unordered-containers >=0.2.5.1 && <0.3,
        hashable >=1.2.3.3 && <1.3
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
    ghc-options: -ferror-spans -O2

executable exe-AlgoHaskell
    main-is: Main.hs
    build-depends:
        AlgoHaskell -any,
        base -any,
        criterion -any,
        containers >=0.5.6.2 && <0.6,
        mtl >=2.2.1 && <2.3,
        unordered-containers >=0.2.5.1 && <0.3,
        hashable >=1.2.3.3 && <1.3
    default-language: Haskell2010
    hs-source-dirs: src test
    other-modules:
        Bench.Puzzles.FibBench
        Benchs
        Bench.Queue
    ghc-options: -ferror-spans -O2

test-suite test-AlgoHaskell
    type: exitcode-stdio-1.0
    main-is: TestMain.hs
    build-depends:
        AlgoHaskell -any,
        HUnit -any,
        QuickCheck -any,
        base -any,
        criterion -any,
        containers >=0.5.6.2 && <0.6,
        mtl >=2.2.1 && <2.3,
        unordered-containers >=0.2.5.1 && <0.3,
        hashable >=1.2.3.3 && <1.3
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Test.Graph.BfsTest
        Test.Graph.DfsTest
        Test.List.IndexListTest
        Test.Puzzles.FibTest
        Test.RMQ
        TestSuite
        Test.Queue
    ghc-options: -ferror-spans
